--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -10,7 +10,7 @@
 <table border="1">
     {% for task in tasks %}
         <tr>
-            <td><a href="{{ url_for('task', id=task.id) }}">task{{ task.id }}</a></td>
+            <td><a href="{{ url_for('.task', task_id=task.id) }}">task{{ task.id }}</a></td>
             <td>{{ task.date_from }}</td>
             <td>{{ task.date_to }}</td>
             <td>{{ task.cur_id }}</td>
